Archive2/51/7f4c716e6410d1/output
main.cpp:81:3: error: static_assert failed "tuple1 sizeof not 1"
  static_assert(sizeof(tuple1)==1, "tuple1 sizeof not 1");
  ^             ~~~~~~~~~~~~~~~~~
main.cpp:84:3: error: static_assert failed "tuple2 sizeof not 1"
  static_assert(sizeof(tuple2)==1, "tuple2 sizeof not 1");
  ^             ~~~~~~~~~~~~~~~~~
2 errors generated.
